k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: kavyagpt-backend
  namespace: kavyagpt

spec:
  replicas: 1

  selector:
    matchLabels:
      app: backend

  template:
    metadata:
      labels:
        app: backend

    spec:
      containers:
        - name: backend

          image: kavya1111999/kavyagpt-backend:v2

          imagePullPolicy: Always

          ports:
            - containerPort: 9000

          readinessProbe:
            httpGet:
              path: /
              port: 9000
            initialDelaySeconds: 10
            periodSeconds: 5

          livenessProbe:
            httpGet:
              path: /
              port: 9000
            initialDelaySeconds: 30
            periodSeconds: 10

          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"

            limits:
              memory: "512Mi"
              cpu: "500m"
