k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: kavyagpt-frontend

spec:
  replicas: 1

  selector:
    matchLabels:
      app: frontend

  template:

    metadata:
      labels:
        app: frontend

    spec:

      containers:
        - name: frontend

          image: kavyagpt-frontend

          imagePullPolicy: Never

          ports:
            - containerPort: 80
