k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: kavyagpt-ingress

spec:

  ingressClassName: nginx

  rules:
    - http:

        paths:

          - path: /api
            pathType: Prefix

            backend:
              service:
                name: backend-service

                port:
                  number: 8000

          - path: /
            pathType: Prefix

            backend:
              service:
                name: frontend-service

                port:
                  number: 80
